--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npm-run-all --parallel watch demon",
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
+    "demon": "nodemon dist/index.js",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^14.14.10",
     "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.1.2"
   }
 }
